Login Feature added

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body{
 :root {
   --primary-green: #1abc9c;;
   --dark-green: black bold;;
-  --light-green: #E3F2E7;
+  --light-green: #30bd56;
   --white: #ffffff;
   --nav-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   --transition-speed: 0.3s;
